--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
           <table>
             <caption>Most Recent Books I've Read</caption>
             <colgroup>
-              <col span = "3" class="Genre">
-              <col span = "3" class="Book">
-              <col span = "3" class="Author">
+              <col class="Genre">
+              <col class="Book">
+              <col class="Author">
           </colgroup>
             <tr>
-              <th scope = "col" style = "border:1px solid rgb(199, 199, 199)">Genre</th>
-              <th scope = "col" style = "border:1px solid rgb(199, 199, 199)">Book</th>
-              <th scope = "col" style = "border:1px solid rgb(199, 199, 199)">Author</th>
+              <th style = "border:1px solid rgb(199, 199, 199)">Genre</th>
+              <th style = "border:1px solid rgb(199, 199, 199)">Book</th>
+              <th style = "border:1px solid rgb(199, 199, 199)">Author</th>
             </tr>
             <tr>
               <td style = "border:1px solid rgb(199, 199, 199)">Historical Nonfiction</td>
